# cpufrequencymonitor

./: .gitignore  CMakeLists.txt  README.md
src/: cpu.cpp  cpu.h  cpufrequencymonitor.desktop  icon.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
